Update and rename brainn.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brainn</title>
+    <title>Brain</title>
 </head>
 <style>
     body{
-        background-image: url(tt.jpg);
+        background-image: url("https://github.com/Narendra1920Singh/rrr/blob/main/tt.jpg?raw=true");
        background-size: contain;
     }
     .div1
